# ML-Project

./: .gitignore  .pre-commit-config.yaml  Predictive_Model_Development_and_Evaluation.ipynb  README.md  pyproject.toml  requirements.txt
data/: README.md
data/interim/: kidney_disease_encoded.csv  kidney_disease_interim.csv
data/processed/: kidney_disease_encoded.csv  kidney_disease_normalized.csv
notebooks/: EDA_Feature_Distributions.ipynb  EDA_Missing_Values_Analysis.ipynb  Encode_Categorical_Values.ipynb  Evaluate_RF_Balancing.ipynb  Evaluate_RF_DimensionalityReduction.ipynb  Explainability_CKD_Selected_Model.ipynb  Normalize_Numeric_Features.ipynb  Optimize_RF_Hyperparameters.ipynb  Predictive_Model_Development_and_Evaluation.ipynb  Spot_Checking_Algorithms.ipynb  Spot_Checking_Balancing.ipynb  Spot_Checking_DimensionalityReduction.ipynb  Spot_Checking_ModelComparison.ipynb  Validate_Interim_Dataset.ipynb
reports/paper/: README.md  ckd_prediction.tex  main.tex  references.bib
reports/paper/data/: model_comparison_macro_by_class_summary.csv  model_comparison_no_dr_summary.csv
reports/paper/sections/: conclusion.tex  introduction.tex  methodology.tex  results.tex
src/: modeling_utils.py  modeling_workflow.py  perform_minimal_data_cleaning.py  visualization_utils.py
src/explainability/: __init__.py  base_explainer.py  factory.py  reporting.py  run_explainability.py  visualizations.py
src/explainability/explainers/: __init__.py  (+5 more)
tests/: test_base_explainer.py  test_explainer_factory.py  test_knn_explainer.py  test_reporting.py  test_visualizations.py
