[project]
name = "ml-project"
version = "0.1.0"
description = "Machine learning project for CKD prediction and explainability analysis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "imbalanced-learn>=0.14.0,<0.15",
    "ipykernel>=7.0.0,<8",
    "ipywidgets>=8.1.0,<9",
    "jupyterlab>=4.5.0,<5",
    "lime>=0.2.0.1,<0.3",
    "matplotlib>=3.10.0,<4",
    "nbformat>=5.10.0,<6",
    "numpy>=2.2.0,<3",
    "pandas>=2.3.0,<3",
    "scikit-learn>=1.7.0,<2",
    "scipy>=1.15.0,<2",
    "seaborn>=0.13.0,<0.14",
    "shap>=0.50.0,<0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0,<2",
    "nbstripout>=0.8.1,<0.9",
    "pre-commit>=4.0.0,<5",
    "pytest>=9.0.0,<10",
    "ruff>=0.14.6,<0.15",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "notebooks",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "notebooks/",
    ".venv/",
    "reports/",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
addopts = "-q"
